src/objects/OIF_BL_based_on_Business_group__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>Used to Capture market value of Account</description>
        <label>Business Group</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bussiness_Line__c</fullName>
        <description>Used to capture Business Line corresponding to a market value</description>
        <label>Bussiness Line</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OIF-BL based on Business group</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Business_Group__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Bussiness_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>OIF-BL based onBusiness groups</pluralLabel>
</CustomObject>